# deepfake-voice-inference

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/media_gateway/: audio_engine.py  capture_client.py  stream_client.py  stream_signature.py  udp_tcp_tunnel.py
docs/en/: media_gateway.md
scripts/: config.env.example  lib.sh  server.sh  tunnel.sh
tests/: test_stream_signature.py
