[tool.poetry]
name = "deepfake-audio-video-inference"
version = "0.1.0"
description = "Headless realtime audio/video deepfake inference over an SSH-tunneled stream"
authors = ["alfa-deepfake"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
deepfake-media-transport = { path = "../deepfake-media-transport", develop = true }
deepfake-stream-signature = { path = "../deepfake-stream-signature", develop = true }
Cython = "*"
fairseq = "0.12.2"
faiss-cpu = "1.7.3"
librosa = "0.9.1"
llvmlite = "0.39.0"
numba = "0.56.4"
numpy = "1.23.5"
opencv-python = "4.10.0.84"
Pillow = ">=9.1.1"
praat-parselmouth = ">=0.4.2"
python-dotenv = ">=1.0.0"
pyworld = "0.3.2"
scipy = "*"
sounddevice = "*"
torch = "2.4.0"
torchaudio = "2.4.0"
torchcrepe = "0.0.20"
torchfcpe = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
